--- a/css/FW.css
+++ b/css/FW.css
@@ -2,7 +2,7 @@ html {
    font-family: Arial, sans-serif
 }
 h2{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:0px;}
-h1{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:0px;font-weight:bolder;font-size: 3em;}
+h1{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:15px;font-weight:bolder;font-size: 3em;}
 p{color: #0D1C41;text-align: left;font-size: 1.1em;}
 .container {
     margin: 0;
@@ -126,6 +126,7 @@ img  {
   
   .gallery img {
     padding:10%;
+    max-height:300px;
     
   } 
   .desc {
@@ -234,7 +235,5 @@ img  {
     h2{
       text-align: center;
     }
-    .desc{
-      display:none;
-    }
+    
   }
