--- a/css/FW.css
+++ b/css/FW.css
@@ -181,7 +181,7 @@ img  {
     display:inline;
   }
  .f img{
-  width:30px;
+  width:15%;
   padding-left:10px;
   padding-right:10px;
     display:inline;
